<resources>
    <string name="app_name">list-your-product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="type_email">digite seu email</string>
    <string name="type_password">digite sua senha</string>
    <string name="register">cadastrar</string>
    <string name="to_enter">entrar</string>
    <string name="register_ok">Registro realizado com sucesso aperte ok para ir para tela de login</string>
    <string name="ok">ok</string>
    <string name="complete_name">digite nome o completo</string>
    <string name="type_new_password">digite uma senha</string>
    <string name="type_movie_name">digite o nome do filme</string>
    <string name="button_search_movie">buscar filme</string>
    <string name="button_list_movie">Listar filmes</string>

    <string name="button_register">Registrar</string>
    <string name="button_clear">Limpar</string>
    <string name="click_to_continue">Clique para continua</string>
    <string name="empty_mail_space">Email em branco não permitido</string>
    <string name="empty_password_space">Password em branco não permitido</string>
    <string name="empty_name">Nome em branco não permitido</string>
    <string name="mail_not_registered">Esse email não está cadastrado</string>
    <string name="mail_and_password_not_match">Email e senha não conferem</string>
    <string name="mail_not_valid">Digite um email válido</string>
    <string name="Too_many_requests">Login bloqueado por muitas tentativas, tente novamente mais tarde</string>
    <string name="weak_password">senha muito fraca</string>
    <string name="wait_Rest_screen">Aguarde enquanto a base de dados é carregada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- card movie budgets -->
    <string name="card_movie_button">leia mais</string>
    <string name="card_movie_title">movies name</string>


    <!-- TODO: Remove or change this placeholder text -->


</resources>