<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.ui.resgister.RegisterFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/action_back_register"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/top_center_image_register_screen"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:srcCompat="@drawable/title"
            />

        <ImageView
            android:id="@+id/exit_register"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ic_exit_to_app_black_24dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/name_register"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/backshape"
        android:ems="10"
        android:hint="@string/complete_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/backshape"
        android:ems="10"
        android:hint="@string/type_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_register" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/backshape"
        android:ems="10"
        android:hint="@string/type_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button_screen_register"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bt_background"
        android:text="@string/button_register"
        app:layout_constraintEnd_toStartOf="@+id/guideline_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_button_screen_register"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bt_background"
        android:onClick="clearCamps"
        android:text="@string/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_register"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
