<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".display.ui.FragmentSearchMovie">


    <LinearLayout
        android:id="@+id/linear_layout_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/button_back_search"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/top_center_image_search_screen"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:srcCompat="@drawable/title" />

        <ImageView
            android:id="@+id/exit_search"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ic_exit_to_app_black_24dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

    <EditText
        android:id="@+id/name_movie_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/backshape"
        android:ems="10"
        android:hint="@string/type_movie_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linear_layout_screen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button_screen_register"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bt_background"
        android:text="@string/button_search_movie"
        app:layout_constraintEnd_toStartOf="@+id/guideline_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_movie_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_button_screen_search"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bt_background"
        android:onClick="clearCamps"
        android:text="@string/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_search"
        app:layout_constraintTop_toBottomOf="@+id/name_movie_search" />



</androidx.constraintlayout.widget.ConstraintLayout>